documentacion/obtenida/ARINC 429/driver and software/PC-SSB-1/WIN95/PS1W32VB.BAS

Public Declare Sub SSBT_RamRdS Lib "PS1W32.DLL" Alias "_SSBT_RamRdS@16" (ByRef bufptr As Long, ByVal offval As Integer, ByVal cntval As Integer, ByVal handleval As Long)
Public Declare Sub SSBT_RamWrS Lib "PS1W32.DLL" Alias "_SSBT_RamWrS@16" (ByRef bufptr As Long, ByVal offval As Integer, ByVal cntval As Integer, ByVal handleval As Long)
Public Declare Function SSBT_RcMsg Lib "PS1W32.DLL" Alias "_SSBT_RcMsg@20" (ByVal cmdval As Long, ByRef dwdptr As Long, ByVal wcval As Integer, ByVal blkval As Integer, ByVal handleval As Long) As Long
Public Declare Function SSBT_RdAWC Lib "PS1W32.DLL" Alias "_SSBT_RdAWC@4" (ByVal handleval As Long) As Integer
Public Declare Function SSBT_RdCwd Lib "PS1W32.DLL" Alias "_SSBT_RdCwd@8" (ByVal blkval As Integer, ByVal handleval As Long) As Long
Public Declare Sub SSBT_RdDwd Lib "PS1W32.DLL" Alias "_SSBT_RdDwd@16" (ByRef dwdptr As Long, ByVal wcval As Integer, ByVal blkval As Integer, ByVal handleval As Long)
Public Declare Function SSBT_RdMWC Lib "PS1W32.DLL" Alias "_SSBT_RdMWC@4" (ByVal handleval As Long) As Integer
Public Declare Function SSBT_RdRegAccess Lib "PS1W32.DLL" Alias "_SSBT_RdRegAccess@4" (ByVal handleval As Long) As Long
Public Declare Function SSBT_RdStatReg Lib "PS1W32.DLL" Alias "_SSBT_RdStatReg@4" (ByVal handleval As Long) As Long
Public Declare Sub SSBT_Reset Lib "PS1W32.DLL" Alias "_SSBT_Reset@4" (ByVal handleval As Long)
Public Declare Sub SSBT_ResetMon Lib "PS1W32.DLL" Alias "_SSBT_ResetMon@4" (ByVal handleval As Long)
Public Declare Sub SSBT_SelMonMem Lib "PS1W32.DLL" Alias "_SSBT_SelMonMem@8" (ByVal regval As Long, ByVal handleval As Long)
Public Declare Function SSBT_Shl Lib "PS1W32.DLL" Alias "_SSBT_Shl@8" (ByVal dataval As Long, ByVal cntval As Integer) As Long
Public Declare Function SSBT_Shr Lib "PS1W32.DLL" Alias "_SSBT_Shr@8" (ByVal dataval As Long, ByVal cntval As Integer) As Long
Public Declare Function SSBT_Trigger Lib "PS1W32.DLL" Alias "_SSBT_Trigger@4" (ByVal handleval As Long) As Long
Public Declare Function SSBT_TxMsg Lib "PS1W32.DLL" Alias "_SSBT_TxMsg@20" (ByVal cmdval As Long, ByRef dwdptr As Long, ByVal wcval As Integer, ByVal blkval As Integer, ByVal handleval As Long) As Long
Public Declare Function SSBT_ValFromAscii Lib "PS1W32.DLL" Alias "_SSBT_ValFromAscii@8" (ByVal asciistr As String, ByVal radixval As Long) As Long
Public Declare Function SSBT_ValToAscii Lib "PS1W32.DLL" Alias "_SSBT_ValToAscii@16" (ByVal value As Long, ByVal asciistr As String, ByVal numbits As Long, ByVal radixval As Long) As String
Public Declare Sub SSBT_VerStr Lib "PS1W32.DLL" Alias "_SSBT_VerStr@8" (ByVal strptr As String, ByVal cntval As Long)
Public Declare Function SSBT_WrCtrlReg Lib "PS1W32.DLL" Alias "_SSBT_WrCtrlReg@16" (ByVal trval As Long, ByVal wcval As Integer, ByVal blkval As Integer, ByVal handleval As Long) As Long
Public Declare Sub SSBT_WrCwd Lib "PS1W32.DLL" Alias "_SSBT_WrCwd@12" (ByVal cmdval As Long, ByVal blkval As Integer, ByVal handleval As Long)
Public Declare Sub SSBT_WrDwd Lib "PS1W32.DLL" Alias "_SSBT_WrDwd@16" (ByRef dwdptr As Long, ByVal wcval As Integer, ByVal blkval As Integer, ByVal handleval As Long)
Public Declare Sub SSBT_WrRegAccess Lib "PS1W32.DLL" Alias "_SSBT_WrRegAccess@8" (ByVal regval As Long, ByVal handleval As Long)
Public Declare Sub SSBT_WrRegAddr Lib "PS1W32.DLL" Alias "_SSBT_WrRegAddr@8" (ByVal regval As Long, ByVal handleval As Long)

'**
'*
'*  PC-SSB-1 Driver predefined constants.
'*
'**

Public Const SSBT_WINDOW_SIZE As Integer = &H1000     'Size in bytes of memory window

Public Const SSBT_DFLT_ADDR As Integer = &HCC00       'Factory default segment address
Public Const SSBT_DFLT_PORT As Integer = &H2C0        'Factory default port address
Public Const SSBT_DFLT_IRQ As Integer = &H2          'Factory default interrupt request

Public Const REG_CTRL0 As Integer = &H0        'Port address offset of Control Register 0
Public Const REG_CTRL1 As Integer = &H1        'Port address offset of Control Register 1
Public Const REG_CTRL2 As Integer = &H2        'Port address offset of Control Register 2
Public Const REG_CTRL3 As Integer = &H3        'Port address offset of Control Register 3
Public Const REG_TRIG As Integer = &H4        'Port address offset of Trigger Register
Public Const REG_CLRINT As Integer = &H5        'Port address offset of Clear Interrupt Register
Public Const REG_ADDR As Integer = &H6        'Port address offset of Address Register
Public Const REG_ACCESS As Integer = &H7        'Port address offset of Access Register

Public Const REG_STAT0 As Integer = &H0         'Port address offset of Status Register 0
Public Const REG_STAT2 As Integer = &H2         'Port address offset of Status Register 2
Public Const REG_STAT3 As Integer = &H3         'Port address offset of Status Register 3
Public Const REG_STAT4 As Integer = &H4         'Port address offset of Status Register 4
Public Const REG_STAT5 As Integer = &H5         'Port address offset of Status Register 5

Public Const IREG_CTRL0 As Integer = &H0        'Address of Internal Control Register 0
Public Const IREG_CTRL1 As Integer = &H1        'Address of Internal Control Register 1
Public Const IREG_CTRL2 As Integer = &H2        'Address of Internal Control Register 2
Public Const IREG_CTRL3 As Integer = &H3        'Address of Internal Control Register 3
Public Const IREG_CTRL4 As Integer = &H4        'Address of Internal Control Register 4

'**
'*
'*  The following predefined constants identify the
'*  values of the bit positions of Control Register 0.
'*
'**

Public Const BCMODE As Integer = &H0           'Enables BC mode
Public Const RTMODE As Integer = &H10          'Enables RT mode
Public Const SIMMODE As Integer = &H20          'Enables simulate mode (BC only)
Public Const MONMODE As Integer = &H40          'Monitor mode
Public Const XTRIGEN As Integer = &H8           'Enables external trigger
Public Const INTEN As Integer = &H4           'Enables interrupt to host
Public Const RC0BUS As Integer = &H0           'Selects receive bus 0
Public Const RC1BUS As Integer = &H2           'Selects receive bus 1
Public Const TX0BUS As Integer = &H0           'Selects transmit bus 0
Public Const TX1BUS As Integer = &H1           'Selects transmit bus 1

'**
'*
'*  The following predefined constants identify the
'*  values of the bit positions of Control Register 1.
'*
'**

Public Const XMITMSG As Integer = &H80          'Transmit message
Public Const RCVMSG As Integer = &H0           'Receive message

'**
'*
'*  The following predefined constants identify the
'*  values of the bit positions of Control Register 3.
'*
'**

Public Const CTRL3_RESET As Integer = &H80    'Resets board
Public Const CTRL3_MRST As Integer = &H2     'Resets monitor
Public Const CTRL3_MONMEM As Integer = &H1     'Selects monitor memory
Public Const CTRL3_TERMMEM As Integer = &H0     'Selects terminal memory

'**
'*
'*  The following predefined constants identify the
'*  values of the bit positions of Status Register 0.
'*
'**

Public Const STAT0_INTI As Integer = &H80     'INTI bit
Public Const STAT0_MMEM As Integer = &H40     'Set if monitor memory selected
Public Const STAT0_MFULL As Integer = &H20     'Set if monitor is full
Public Const STAT0_MACT As Integer = &H10     'Set if monitor is active and not full
Public Const STAT0_NORESP As Integer = &H8      'Set if no response error
Public Const STAT0_WCERR As Integer = &H4      'Set if word count error
Public Const STAT0_ERROR As Integer = &H2      'Set if error
Public Const STAT0_DONE As Integer = &H1      'Set if done

'**
'*
'*  The following predefined constants identify the values
'*  of the bit positions of the Monitor Attribute Byte.
'*
'**

Public Const ATTR_RBUS As Integer = &H8        'Which bus received from
Public Const ATTR_PGAP As Integer = &H4        'Set if preceeding gap
Public Const ATTR_RSYNC As Integer = &H2        'Set if command sync
Public Const ATTR_WERR As Integer = &H1        'Set if word error

'**
'*
'*  The following predefined constants identify the error
'*  return values.
'*
'**

Public Const ERR_NONE As Long = 0          'No error
Public Const ERR_UNKNOWN As Long = -1         'An unexpected error occurred
Public Const ERR_CHKREG3 As Long = -2         'Did not find zeros in bits 2-7 of Status Register 3
Public Const ERR_CHKREG5 As Long = -3         'Did not find zeros in bits 2-7 of Status Register 5
Public Const ERR_CHKREG01 As Long = -4         'While toggling MMEM bit in Status Register 0, read 1, expected 0
Public Const ERR_CHKREG02 As Long = -5         'While toggling MMEM bit in Status Register 0, read 0, expected 1
Public Const ERR_CHKREG03 As Long = -6         'While toggling MMEM bit in Status Register 0, read 1, expected 0
Public Const ERR_CHKTERM As Long = -7         'Terminal memory contains unstable data
Public Const ERR_CHKMON As Long = -8         'Monitor memory contains unstable data
Public Const ERR_CHKMEMWR As Long = -9         'Cannot write to the terminal memory
Public Const ERR_CHKTERMWR As Long = -10        'Trial value written to terminal memory disappeared
Public Const ERR_CHKMONWR As Long = -11        'Trial value written to monitor memory disappeared
Public Const ERR_BADVER As Long = -20        'A bad version was encountered
Public Const ERR_BADPARAMS As Long = -21        'CardOpen() called with bad parameters
Public Const ERR_NOHANDLES As Long = -22        'CardOpen() already has allocated too many handles
Public Const ERR_NOCARD As Long = -23        'CardOpen() could not find a PS-SSB-1 card at the specified address
Public Const ERR_NOIO As Long = -24        'CardOpen() could not find the I/O ports
Public Const ERR_NOMEM As Long = -25        'CardOpen() could not find the memory
Public Const ERR_BAD16BIT As Long = -26        'Card is conflicting with another 16-bit card
Public Const ERR_NOSEL As Long = -27        'CardOpen() could not allocate a memory selector
Public Const ERR_BADHANDLE As Long = -28        'A bad handle was specified
Public Const ERR_VXD As Long = -29        'An error occurred in the VXD
